# mgraph_client

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mgraph_client/: __init__.py  device_management.py  directory_objects.py  drives.py  fields.py  groups.py  resource.py  resources.py  service_principals.py  sites.py  users.py
tests/: conftest.py  test.json  test_device_management.py  test_drives.py  test_groups.py  test_sites.py
